fixed Nav bar and slogan spacing tested on multiple resolution

--- a/css/style.css
+++ b/css/style.css
@@ -4,46 +4,39 @@
 .navbar {
 	float: right;
 	height: 30px;
-	/*border-left: solid white 3px;*/
 	position: relative;
 	z-index: 1;
 	padding-top: 0px;
 	margin-top: 0px;
-	/*vertical-align: auto;*/
 	margin-right: 180px;
 	top: 0px;
 	left: 10%;
 }
-.blank{
-	visibility: hidden;
-	margin-left: 80px;
-}
 
-.logo {
-	height: 60%;
+.logocont {
+	height: 30%;
 	margin-left: 10px;
 	margin-top: 8px;
-	/*visibility: hidden;*/
 }
-/*will position after font is decided*/
+
+.logocont img {
+	height: 100%;
+}
+
 .slogan {
 	font-size: 80px;
-	display: inline-block;
-	/*position: relative;*/
-	z-index: 5;
-	float: right;
-	margin: center;
+	margin: 0 auto;
 	color: white;
-	font-family: Georgia;
-	width: 1050px;
+	font-family: "Georgia", serif;
+	width:1100px;
 	text-align: center;
 	text-shadow: 2px 2px black;
-	margin-right: 110px;
-	margin-top: 120px;
-	/*top: 50%;*/
+	clear: both;
+	padding-top: 55px;
 }
 
 .list {
+	float: right;
 	list-style-type: none;
 	margin: 0px;
 	padding: 0px;
@@ -51,20 +44,15 @@
 	vertical-align: auto;
 	background: rgba(0, 0, 0, 0.0);
 	text-shadow: 2px 2px black;
-	/*background-color: #444444;*/
-	/*position: relative;*/
 }
 
 .header li {
 	display: inline-block;
-	float: left;
 	padding-left: 0px;
 	vertical-align: auto;
 	font-size: 28px;
-	/*font-family: Arial;*/
 	font-family: Lato, Helvetica, Arial, sans-serif; font-weight: 500;
 	padding-top: 7px;
-	/*position: relative;*/
 }
 
 .home {
@@ -116,16 +104,6 @@
 	text-decoration: underline;
 }
 
-
-/*.social {
-	float: right;
-	width: 140px;
-	margin-top: 10px;
-	z-index: 1;
-	margin-right: 25px;
-	position: relative;*/
-}
-
 .twitter {
 	width: 50px;
 	float: left;
@@ -141,32 +119,27 @@
 }
 
 .header {
-	/*background-image: url(https://images.unsplash.com/uploads/1411040661312f50ec8e2/ded9d54e?crop=entropy&dpr=2&fit=crop&fm=jpg&h=900&ixjsv=2.1.0&ixlib=rb-0.3.5&q=50&w=1550);*/
 	width: 100%;
 	height: 600px;
 	margin: 0px;
 	background-image: url(https://images.unsplash.com/uploads/1411040661312f50ec8e2/ded9d54e?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&w=1080&fit=max&s=9242bb2c1fcb8cb5eaa325b2652b12b2);
 	background-size: cover;
-	/*position: absolute;*/
 }
 
 .imghead {
 	width: 100%;
 	margin-right: -40px;
-	/*position: absolute;*/
 	margin-top: -800px;
 	z-index: 0;
 }
 
 .center {
-  text-align: center;
+	text-align: center;
 }
 
 .content {
 	width: 900px;
-	/*border: solid 1px black;*/
 	height: 600px;
-	/*position: relative;*/
 	text-align: center;
 	margin: auto;
 }
